--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "mongoose": "^7.0.0",
+    "mongodb": "^6.3.0"
   }
 } 
