--- a/vercel.json
+++ b/vercel.json
@@ -13,14 +13,12 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/server.js"
-    },
-    {
-      "handle": "filesystem"
+      "dest": "/backend/server.js"
     },
     {
       "src": "/(.*)",
-      "dest": "frontend/$1"
+      "dest": "/frontend/$1",
+      "continue": true
     }
   ],
   "env": {
