--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "nav-website",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
-    "build": "cd backend && npm install"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "start": "cd backend && node server.js",
+    "build": "echo 'No build step needed'"
   }
 } 
