--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,11 @@
       "use": "@vercel/node"
     },
     {
-      "src": "frontend/index.html",
-      "use": "@vercel/static"
+      "src": "frontend/**",
+      "use": "@vercel/static",
+      "config": {
+        "distDir": "frontend"
+      }
     }
   ],
   "routes": [
@@ -29,5 +32,6 @@
   ],
   "env": {
     "MONGODB_URI": "@mongodb_uri"
-  }
+  },
+  "outputDirectory": "frontend"
 }
