--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,10 @@
       "use": "@vercel/node"
     },
     {
-      "src": "frontend/**",
+      "src": "frontend/index.html",
       "use": "@vercel/static",
       "config": {
-        "distDir": "frontend"
+        "zeroConfig": true
       }
     }
   ],
@@ -22,16 +22,11 @@
       "handle": "filesystem"
     },
     {
-      "src": "/",
-      "dest": "frontend/index.html"
-    },
-    {
       "src": "/(.*)",
-      "dest": "frontend/$1"
+      "dest": "frontend/index.html"
     }
   ],
   "env": {
     "MONGODB_URI": "@mongodb_uri"
-  },
-  "outputDirectory": "frontend"
+  }
 }
