--- a/vercel.json
+++ b/vercel.json
@@ -27,6 +27,6 @@
     }
   ],
   "env": {
-    "MONGODB_URI": "@mongodb_uri"
+    "MONGODB_URI": "mongodb+srv://liyuhao658:ZvoM1ytkvYQKedIS@cluster0.srgfy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
   }
 }
