fix: add auth bypass for health check endpoint

--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,11 @@
   ],
   "routes": [
     {
+      "src": "/api/health",
+      "dest": "backend/server.js",
+      "continue": true
+    },
+    {
       "src": "/api/(.*)",
       "dest": "backend/server.js"
     },
