--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "name": "nav-website",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "cd backend && node server.js",
-    "build": "echo 'No build step needed'"
+    "start": "node backend/server.js"
+  },
+  "dependencies": {
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3",
+    "node-cron": "^3.0.3"
   }
-} 
+}
