--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^8.0.3",
+    "mysql2": "^3.12.0",
     "node-cron": "^3.0.3"
   }
 }
