--- a/vercel.json
+++ b/vercel.json
@@ -30,6 +30,9 @@
     }
   ],
   "env": {
-    "MONGODB_URI": "mongodb+srv://liyuhao658:PndF4hROA11U7lZC@cluster0.srgfy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+    "MYSQL_HOST": "159.75.107.196",
+    "MYSQL_USER": "root",
+    "MYSQL_PASSWORD": "debezium",
+    "MYSQL_DATABASE": "nav_website"
   }
 }
